[package]
name = "reqshuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.28"
reqwest = "0.11.20"
scraper = "0.17.1"
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = "1.28.2"
tracing = "0.1.37"
